# python-project-50

./: .gitignore  Makefile  README.md  demo.cast  pyproject.toml  ruff.toml
gendiff/: __init__.py  gendiff.py
gendiff/formaters/: json_formater.py  plain.py  stylish.py  validation.py
gendiff/formatters/: plain.py  stylish.py
gendiff/scripts/: __init__.py  compare.py  file_parser.py  gendiff.py  genetator.py  path.txt  yaml_parser.py
gendiff/tests/: test_gendiff.py
gendiff/tests/fixtures/: json_fixture.json
