[project]
name = "hexlet-code"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "coverage>=7.9.2",
    "pytest-cov>=6.2.1",
    "pyyaml>=6.0.2",
    "ruff<=0.9.7",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["gendiff"]

[dependency-groups]
dev = [
    "pytest-cov>=6.2.1",
]

[project.scripts]
gendiff = "gendiff.scripts.gendiff:main"
